Still trying to figure out why 3D doesnt work, I think it is the platform I am on